test/modules/diten/bad_transitive_use.good
bad_transitive_use.chpl:16: In function 'main':
bad_transitive_use.chpl:17: error: unresolved call 'bar()'
